<resources>
    <string name="app_name">PrimeVideo</string>
    <string name="home">Home</string>
    <string name="tv_show">TV Shows</string>
    <string name="movies">Movies</string>
    <string name="kids">Kids</string>
    <string name="watchlist">Watchlist</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
