<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home" />
        <item
            android:id="@+id/tv_show"
            android:title="@string/tv_show" />
        <item
            android:id="@+id/movies"
            android:title="@string/movies" />
        <item
            android:id="@+id/watchlist"
            android:title="@string/watchlist" />
        <item
            android:id="@+id/downloads"
            android:title="@string/downloads" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/help"
            android:title="@string/help" />
    </group>
</menu>